client/src/styles/css/index.css
/* ... */
.profileScreenFollowing:hover {
  cursor: pointer;
  border-radius: 5px;
  background-color: var(--secondary);
  color: var(--accent);
}
.profileFollowingInfo {
  width: 60%;
  margin-left: 2%;
  overflow-wrap: break-word;
}

/* VIEW PROFILE SCREEN */
.viewProfileScreenContainer {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  margin: 2%;
}

.viewProfileScreenLabel {
  margin-top: 2%;
  margin-bottom: 4%;
  font-weight: bold;
  font-size: 18px;
  color: var(--accent);
}

.viewProfileTextArea {
  margin-top: -2%;
  margin-bottom: 14%;
}

.viewProfilePlaylists {
  display: flex;
  flex-direction: row;
  border: #333333;
  border-radius: 5px;
  margin-left: 0%;
  margin-bottom: 10%;
}

.viewProfilePlaylists:hover {
  background-color: var(--secondary);
}

.profileContainerLeft {
  display: flex;
  flex-direction: column;
  height: 71%;
  width: 25%;
  margin-right: 1%;
  background-color: var(--secondary);
  padding: 1%;
  filter: drop-shadow(5px 0px 0px var(--accent));
}

.profileContainerRight {
  display: flex;
  flex-direction: column;
  border: #333333;
  height: 71%;
  width: 72%;
  border-radius: 5px;
  overflow-y: auto;
  overflow-x: hidden;
}

.profileContainerTop {
  display: flex;
  flex-direction: row;
  padding-bottom: 1%;
}

.profilePicture{
  display: inline-block;
  height: 150px;
  width: 150px;
  margin-bottom: 3%;
}

.profileName {
  display: flex;
  width: 20%;
  justify-content: center;
  margin-left: 22%;
  color: var(--accent);
  text-align: center;
  font-style: italic;
}

.followButtonContainer {
  display: flex;
  justify-content: center;
  margin-top: 20%;
}

.followButton {
  width: 50%;
}

/* PLAYLIST SCREEN */
.playlistScreen {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 100%;
  padding: 2%;
}
.playlistScreenLeftBox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  width: 30%;
  margin-right: 6%;
}
.playlistScreenLeftContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  user-select: none;
}

.playlistPlayAllButton {
  margin: 0 auto;
  margin-top: 2%;
  margin-bottom: -7%;
}

.playlistArt {
  margin-left: 2%;
  margin-top: 2.5%;
  height: 200px;
  width: 200px;
}
.playlistInfo {
  margin-left: 2%;
}

.playlistScreenInfo {
  margin-left: 2%;
  display: flex;
}

.playlistMetadata {
  display: flex;
  flex-direction: column;
  margin-top: 2%;
  margin-left: 3%;
}

.playlistTitleHandling {
  display: flex;
  align-items: center;
}

.playlistTitle {
  margin-top: 3%;
  word-wrap: break-word;
  font-size: 22px;
  border-style: none;
}

.playlistTitleDivider {
  margin-top: -4%;
  width: 95%;
}

.playlistGenreLabel {
  margin-top: 10%;
  font-size: 32px;
  text-align: center;
  margin-bottom: 2%;
}

.playlistNumSongs {
  font-size: 17px;
  margin-left: 1%;
  margin-top: -4%;
}

.playlistDescriptionText {
  font-size: 16px;
  padding: 1%;
  margin: 3%;
  margin-left: 4%;
  margin-right: 4%;
  text-align: left;
  font-style: italic;
  word-wrap: break-word;
  height: 35%;
  border-style: solid;
  border-width: 0.5px;
  border-color: #bbbbbb;
  resize: none !important;
}

.playlistGenreBox {
  display: flex;
  flex-direction: column;
  margin-top: -2%;
  border-style: none;
  width: 100%;
  height: 50%;
  text-align: center;
}

.playlistGenreText {
  display: flex;
  margin: 0 auto;
  margin-top: 2%;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  width: 60%;
  border-top: solid;
  border-width: 1px;
  border-color: #999999;
  padding-top: 3%;
  padding-bottom: 1%;
}

.playlistSongsContainer {
  display: flex;
  flex-direction: column;
  width: 60%;
  height: 100%;
}

.playlistSongsBox {
  display: flex;
  flex-direction: row;
  text-align: center;
  padding-top: 2%;
}
.playlistSongTitleLabel, .playlistSongArtistLabel, .playlistSongDurationLabel {
  font-size: 20px;
  font-style: italic;
}

.playlistSongTitleLabel { margin-left: 15%;}

.playlistSongArtistLabel { margin-left: 33%;}

.playlistSongDurationLabel { margin-left: 21%;}

.playlistSongTitle, .playlistSongDuration, .playlistSongArtist {
  display: flex;
}

.playlistSave {
  display: flex;
  align-items: center;
  justify-content: left;
  width: 100%;
  margin-top: -3%;
}

.playlistSaveButton {
  margin-right: -2%;
  width: 25.5%;
}

.playlistSaveButton:hover {
  cursor: pointer;
}

.playlistSongIcon {
  padding-top: 0.2%;
  color: var(--accent);
  display: flex;
  align-items: center;
  justify-content: center;
}

.playlistSongIcon:hover {
  cursor: pointer;
  color: var(--primary);
}

.playlistSongIcon:active {
  cursor: pointer;
  color: var(--buttonColor);
}

.playlistSongTitle {
  text-align: left;
}

.playlistSongArtist {
  position: absolute;
  left: 70%;
  transform: translate(-50%);
}

.playlistSongDuration {
  position: absolute;
  right: 12.5%;
}

.playlistSongBox {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 2%;
  padding-right: 10%;
  padding-left: 10%;
}

.playlistSongBar {
  font-size: 16px;
  background-color: var(--secondary);
  border: outset;
  border-width: 1px;
  padding: 1%;
  width: 100%;
  display: flex;
}

.songNumber {
  font-size: 18px;
  margin: 0 auto;
  padding-top: 0.25%;
  padding-right: 0.75%;
}
/* 
.playlistPictureModal {
  width: 40%;
  padding: 3%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2.25%;
} */

/* ANIMATIONS */
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes appLogoWaveIntro {
  0% {
    transform: scaleY(0.1);
  }
  30% {
    transform: scaleY(1.3);
  }
  60% {
    transform: scaleY(1.2);
  }
  100% {
    transform: scaleY(1.0);
  }
}
/* ... */

